--- a/OnLand/ControlLaptop/templates/battery.html
+++ b/OnLand/ControlLaptop/templates/battery.html
@@ -1,8 +1,1 @@
-<table>
-<thead><tr><th>Name</th><th>Description</th></tr></thead>
-<tbody>
-<tr><td>Name1</td><td>Description1</td></tr>
-<tr><td>Name2</td><td>Description2</td></tr>
-<tr><td>Name3</td><td>Description3</td></tr>
-</tbody>
-</table>
+{% extends "base.html" %}
