--- a/OnLand/ControlLaptop/templates/_cards/profile.html
+++ b/OnLand/ControlLaptop/templates/_cards/profile.html
@@ -1,3 +1,32 @@
+<div class="card">
+  <div class="header">
+    <h4 class="title">Configuration Profile</h4>
+  </div>
+  <div class="content">
+    <form action="/submit_configuration" method="post" id="configuration-form">
+{#      <input id = "csrf_token" name = "csrf_token" type = "hidden" />#}
+      {{ configuration_form.csrf_token }}
+      {{ configuration_form.air_resistance.label }}
+      {{ configuration_form.air_resistance}}
+      <br>
+      {{ configuration_form.motor_speed.label }}
+      {{ configuration_form.motor_speed}}
+      <br>
+      {{ configuration_form.tube_pressure.label }}
+      {{ configuration_form.tube_pressure}}
+      <br>
+      {{ configuration_form.watchdog_timeout.label }}
+      {{ configuration_form.watchdog_timeout }}
+      <br>
+      {{ configuration_form.pod_ip.label }}
+      {{ configuration_form.pod_ip}}
+      <br>
+      <p id="configration-error-container"></p>
+      {{ configuration_form.submit(class='btn btn-primary btn-fill btn-md') }}
+    </form>
+  </div>
+</div>
+
 <div class="card ">
    <div class="header">
       <h4 class="title">Flight Profile</h4>
