--- a/OnLand/ControlLaptop/templates/_cards/profile.html
+++ b/OnLand/ControlLaptop/templates/_cards/profile.html
@@ -3,8 +3,8 @@
     <h4 class="title">Configuration Profile</h4>
   </div>
   <div class="content">
-    <form action="/submit_configuration" method="post" id="configuration-form">
-{#      <input id = "csrf_token" name = "csrf_token" type = "hidden" />#}
+{#    <form action="/submit_configuration" method="post" id="configuration-form">#}
+    <form action="" method="post" id="configuration-form">
       {{ configuration_form.csrf_token }}
       <div class="row">
         <div class="form-group col-md-6">
