Ajax form configuration submission

--- a/OnLand/ControlLaptop/templates/profile.html
+++ b/OnLand/ControlLaptop/templates/profile.html
@@ -6,6 +6,11 @@
    <div class="col-md-12">
       {% include '_cards/profile.html' %}
    </div>
+
+{% block scripts %}
+{{ super() }}
+    <script src="../static/assets/js/FlightProfile.js"></script>
+{% endblock %}
 </div>
 
 
