--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -35,12 +35,10 @@
     <!--  Notifications Plugin    -->
     <script src="{{ url_for('static', filename='assets/js/bootstrap-notify.js') }}"></script>
 
-    <!--  Google Maps Plugin    -->
-    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
-
     <!-- Light Bootstrap Table Core javascript and methods for Demo purpose -->
     <script src="{{ url_for('static', filename='assets/js/light-bootstrap-dashboard.js') }}"></script>
 
+    <script src="../static/assets/js/FlightProfile.js"></script>
 {#    <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->#}
 {#    <script src="{{ url_for('static', filename='assets/js/demo.js') }}"></script>#}
 
