Sending JSON commands

--- a/OnLand/ControlLaptop/templates/_header.html
+++ b/OnLand/ControlLaptop/templates/_header.html
@@ -29,7 +29,7 @@
                </ul>
             </li>
             <span style="padding: 4px; margin:10px 20px 10px 0 ">
-                <a href="#" class="btn btn-danger btn-xs btn-fill text-light">ESTOP</a>  </span>
+                <button id="e-stop" href="#" class="btn btn-danger btn-xs btn-fill text-light">ESTOP</button>  </span>
 
       </div>
    </div>
