added command toolbar to global imports, disconnection from pod.

--- a/OnLand/ControlLaptop/templates/_header.html
+++ b/OnLand/ControlLaptop/templates/_header.html
@@ -23,6 +23,7 @@
                   <li><a href="#" id="commandFill">Fill</a></li>
                   <li><a href="#" id="commandStandy">Standby</a></li>
                   <li><a href="#" id="commandReboot">Reboot</a></li>
+                 <li><a href="#" id="disconnect">Disconnect</a></li>
                   <li class="divider"></li>
                   <li style="background-color: #00bbff"><a href="#" id="commandArm"><b>Arm</b></a></li>
                   <li><a href="#" id="commandFire"><b>Fire</b></a></li>
