--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -39,6 +39,7 @@
     <script src="{{ url_for('static', filename='assets/js/light-bootstrap-dashboard.js') }}"></script>
 
     <script src="../static/assets/js/FlightProfile.js"></script>
+    <script src="../static/assets/js/dynamic.js"></script>
 {#    <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->#}
 {#    <script src="{{ url_for('static', filename='assets/js/demo.js') }}"></script>#}
 
