Put License and credits back on

--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -18,7 +18,7 @@
     {#    <link href="{{ url_for('static', filename='assets/css/animate.min.css') }}" rel="stylesheet"/>#}
 
     {#    <!-- CSS for Demo Purpose, don't include it in your project     -->#}
-        <link href="{{ url_for('static', filename='assets/css/demo.css') }}" rel="stylesheet" />
+{#        <link href="{{ url_for('static', filename='assets/css/demo.css') }}" rel="stylesheet" />#}
 
     <!--  Fonts and icons -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -84,7 +84,7 @@
                {% endblock %}
             </nav>
             <p class="copyright pull-right">
-{#               &copy; 2017-{{now.year}} <a href="https://paradigmhyperloop.com">Paradigm Hyperloop</a> &bull; Base Theme © 2017 <a href="http://www.creative-tim.com">Creative Tim</a>#}
+               &copy; 2017-{{now.year}} <a href="https://paradigmhyperloop.com">Paradigm Hyperloop</a> &bull; Base Theme © 2017 <a href="http://www.creative-tim.com">Creative Tim</a>
             </p>
          </div>
       </footer>
