--- a/OnLand/ControlLaptop/templates/_sidebar.html
+++ b/OnLand/ControlLaptop/templates/_sidebar.html
@@ -19,6 +19,12 @@
               </a>
             </li>
         {% endfor %}
+      <li class="active-pro">
+                    <a href="upgrade.html">
+                        <i class="pe-7s-rocket"></i>
+                        <p>Upgrade to PRO</p>
+                    </a>
+      </li>
       </ul>
    </div>
 </div>
