--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -21,9 +21,9 @@
 {#        <link href="{{ url_for('static', filename='assets/css/demo.css') }}" rel="stylesheet" />#}
 
     <!--  Fonts and icons -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <link href="{{ url_for('static', filename='assets/css/pe-icon-7-stroke.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static',filename='assets/css/font-awesome.min.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block scripts %}
