Base working DataTables lib

--- a/OnLand/ControlLaptop/templates/battery.html
+++ b/OnLand/ControlLaptop/templates/battery.html
@@ -1,1 +1,11 @@
 {% extends "base.html" %}
+
+{% block content %}
+
+<div class="row">
+    <div class="col-md-12">
+        {% include '_cards/cells.html' %}
+    </div>
+</div>
+
+{% endblock %}
