Minor refactoring in heartbeat

--- a/Examples/SocketIOExamples/flaskServer/templates/DtsControl.html
+++ b/Examples/SocketIOExamples/flaskServer/templates/DtsControl.html
@@ -48,8 +48,8 @@
                 <!-- Connection Status -->
                 <div class="row ptop20">
                   <div class="col-sm text-center btn-header">
-                    Connection: <span id="connection-status" class="font-red">Disconnected</span><br>
-                    Last Message: <span id="last-ping" class="font-red"> -- </span>s
+                    Commander Connection: <span id="connection-status" class="font-red">Disconnected</span><br>
+                    Last Telemetry Update: <span id="last-ping" class="font-red"> -- </span>s
                   </div>
                 </div>
                 <!-- #/Connection Status -->
