--- a/Examples/SocketIOExamples/flaskServer/templates/DtsControl.html
+++ b/Examples/SocketIOExamples/flaskServer/templates/DtsControl.html
@@ -14,7 +14,11 @@
   <link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="/static/css/simple-sidebar.css" rel="stylesheet">
+  <link href="/static/css/DtsControl.css" rel="stylesheet">
+
+  <!-- Loaders -->
+  <link href="/static/vendor/loaders/loaders.css" rel="stylesheet">
+
 
 </head>
 
@@ -48,9 +52,13 @@
                 <!-- Connection Status -->
                 <div class="row ptop20">
                   <div class="col-sm text-center btn-header">
-                    Commander Connection: <span id="connection-status" class="font-red">Disconnected</span><br>
+                    Commander Connection:
+                      <div id="connected-loader" class="loader-inner ball-scale-ripple"></div>
+                      <div id="no-connection-loader"class="loader-inner ball-pulse"></div>
+                    <br>
                     Last Telemetry Update: <span id="last-ping" class="font-red"> -- </span>s
                   </div>
+
                 </div>
                 <!-- #/Connection Status -->
 
@@ -106,6 +114,12 @@
   <!-- JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
   <script src="/static/DtsControl.js"></script>
+
+  <!-- Loaders -->
+  <script src="/static/vendor/loaders/loaders.css.js"></script>
+  <script src="/static/DtsControl.js"></script>
+
+
 
 
 
