--- a/Examples/SocketIOExamples/flaskServer/templates/DtsControl.html
+++ b/Examples/SocketIOExamples/flaskServer/templates/DtsControl.html
@@ -71,11 +71,11 @@
                 <div class="row  pbottom20">
                   <div class="col-sm text-center">
                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                      <label class="btn brake-btn btn-grey btn-on btn-lg">
-                        <input id="on-btn" type="radio" name="options" autocomplete="off"> ON
+                      <label id="on-btn" class="btn brake-btn btn-grey btn-on btn-lg">
+                        <input  type="radio" name="options" autocomplete="off"> ON
                       </label>
-                      <label class="btn btn-grey brake-btn btn-off btn-lg active">
-                        <input id="off-btn" type="radio" name="options" autocomplete="off"> OFF
+                      <label id="off-btn" class="btn btn-grey brake-btn btn-off btn-lg active">
+                        <input  type="radio" name="options" autocomplete="off"> OFF
                       </label>
                     </div>
                   </div>
