--- a/OnLand/ControlLaptop/templates/_cards/profile.html
+++ b/OnLand/ControlLaptop/templates/_cards/profile.html
@@ -7,33 +7,47 @@
       {{ configuration_form.csrf_token }}
       <div class="row">
         <div class="form-group col-md-6">
-        {{ configuration_form.air_resistance.label }}
-        {{ configuration_form.air_resistance (class="form-control", value=saved_configuration['air_resistance'])}}
+        {{ configuration_form.retrieval_timeout.label }}
+        {{ configuration_form.retrieval_timeout (class="form-control", value=saved_configuration['air_resistance'])}}
         </div>
+        <div class="form-group col-md-6">
+          {{ configuration_form.max_flight_time.label }}
+          {{ configuration_form.max_flight_time (class="form-control", value=saved_configuration['motor_speed'])}}
+        </div>
+      </div>
+      <div class="row">
         <div class="form-group col-md-6">
           {{ configuration_form.motor_speed.label }}
           {{ configuration_form.motor_speed (class="form-control", value=saved_configuration['motor_speed'])}}
+        </div>
+        <div class="form-group col-md-6">
+          {{ configuration_form.telemetry_port.label }}
+          {{ configuration_form.telemetry_port (class="form-control", value=saved_configuration['motor_speed'])}}
         </div>
       </div>
 
       <div class="row">
         <div class="form-group col-md-6">
-          {{ configuration_form.tube_pressure.label }}
-          {{ configuration_form.tube_pressure (class="form-control", value=saved_configuration['tube_pressure'])}}
+          {{ configuration_form.command_port.label }}
+          {{ configuration_form.command_port (class="form-control", value=saved_configuration['motor_speed'])}}
         </div>
         <div class="form-group col-md-6">
-          {{ configuration_form.watchdog_timeout.label }}
-          {{ configuration_form.watchdog_timeout (class="form-control", value=saved_configuration['watchdog_timeout']) }}
+          {{ configuration_form.flight_Length.label }}
+          {{ configuration_form.flight_Length (class="form-control", value=saved_configuration['motor_speed'])}}
         </div>
       </div>
       <div class="row">
-        <div class="form-group col-md-12">
+        <div class="form-group col-md-6">
+          {{ configuration_form.heartbeat_timout.label }}
+          {{ configuration_form.heartbeat_timout (class="form-control", value=saved_configuration['motor_speed'])}}
+        </div>
+        <div class="form-group col-md-6">
           {{ configuration_form.pod_ip.label }}
           {{ configuration_form.pod_ip (class="form-control", value=saved_configuration['pod_address']) }}
         </div>
       </div>
       <div class="text-center">
-        <p id="configration-error-container"></p>
+        <p id="configuration-error-container"></p>
         {{ configuration_form.submit(class='btn btn-primary btn-fill btn-md') }}
       </div>
     </form>
@@ -90,7 +104,7 @@
                <td>Brake Set A - Max PSI</td>
                <td id="brakeAMaxValue" >500</td>
                <td>PSI</td>
-               <td>Maximium Allowable Pressure in Brake set A</td>
+               <td>Maximum Allowable Pressure in Brake set A</td>
             </tr>
             <tr>
                <td><i id="brakeBStatus" class="fa fa-circle text-success"></i></td>
