Archive old files, add socket libraries

--- a/OnLand/ControlLaptop/templates/_header.html
+++ b/OnLand/ControlLaptop/templates/_header.html
@@ -2,6 +2,7 @@
     <div class="navbar navbar-default navbar-fixed">
         <span class="navbar-brand hidden-sm hidden-xs" >Comp 2019</span>
 
+        <!-- TODO: Remove if not missed
         <div class="btn btn-primary btn-fill btn-xs">
             <span>Status: </span>
             <span id="status"></span>
@@ -10,7 +11,7 @@
         <i class="fa fa-dashboard text-success" style="margin: 0 10px 0 10px"></i>
         <i class="fa fa-wifi text-success" style="margin: 0 10px 0 10px"></i>
 
-
+        -->
          <div class="nav navbar-nav navbar-right">
 
             <li class="dropdown">
@@ -20,18 +21,18 @@
                   </p>
                </a>
                <ul class="dropdown-menu">
-                  <li><a href="#" id="commandFill">Fill</a></li>
-                  <li><a href="#" id="commandStandy">Standby</a></li>
-                  <li><a href="#" id="commandReboot">Reboot</a></li>
-                 <li><a href="#" id="disconnect">Disconnect</a></li>
+                  <li><a href="#" id="commandFill">Do</a></li>
+                  <li><a href="#" id="commandStandy">We</a></li>
+                  <li><a href="#" id="commandReboot">Need</a></li>
+                 <li><a href="#" id="disconnect">This</a></li>
                   <li class="divider"></li>
-                  <li style="background-color: #00bbff"><a href="#" id="commandArm"><b>Arm</b></a></li>
-                  <li><a href="#" id="commandFire"><b>Fire</b></a></li>
+                  <li style="background-color: #00bbff"><a href="#" id="commandArm"><b>maybe yee</b></a></li>
+                  <li><a href="#" id="commandFire"><b>maybe nah</b></a></li>
                </ul>
             </li>
             <span style="padding: 4px; margin:10px 20px 10px 0 ">
-                <button id="e-stop" href="#" class="btn btn-danger btn-xs btn-fill text-light">ESTOP</button>  </span>
-
+                <button id="e-stop" href="#" class="btn btn-danger btn-xs btn-fill text-light">ESTOP</button>
+            </span>
       </div>
    </div>
 
