--- a/OnLand/ControlLaptop/templates/_toolbar.html
+++ b/OnLand/ControlLaptop/templates/_toolbar.html
@@ -1,4 +1,4 @@
-<div class="row hidden-md hidden-lg">
+<div class="row">
    <div class="col-xs-3">
      <div class="card">
         <div class="header">
@@ -34,7 +34,8 @@
         </div>
         <div class="content">
            <div class="text-center">
-              <i class="fa fa-wifi fa-5x fa-fw text-success"></i> <br> Healthy
+               <div id="connected-loader" class="loader-inner ball-scale-ripple"></div>
+               <div id="no-connection-loader"class="loader-inner ball-pulse"></div>
            </div>
         </div>
      </div>
