--- a/OnLand/ControlLaptop/templates/profile.html
+++ b/OnLand/ControlLaptop/templates/profile.html
@@ -9,3 +9,7 @@
 </div>
 
 {% endblock %}
+
+{% block pageScripts %}
+    <script src="{{ url_for('static',filename='assets/js/FlightProfile.js') }}"></script>
+{% endblock %}
