--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -3,52 +3,51 @@
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 	<meta charset="utf-8" />
-	<link rel="icon" type="image/png" href="{{ url_for('static', filename='assets/img/favicon.ico') }}">
+	<link rel="icon" type="image/png" href="{{ url_for('static', filename='assets/img/paradigm.png') }}">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 {% endblock %}
 
 {% block styles %}
     <!-- Bootstrap core CSS     -->
-    <link href="{{ url_for('static', filename='assets/css/bootstrap.min.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='assets/vendors/bootstrap/bootstrap.min.css') }}" rel="stylesheet" />
 
     <!-- Light Bootstrap Table core CSS    -->
-    <link href="{{ url_for('static', filename='assets/css/light-bootstrap-dashboard.css') }}" rel="stylesheet"/>
-
-    {#    <!-- Animation library for notifications   -->#}
-    {#    <link href="{{ url_for('static', filename='assets/css/animate.min.css') }}" rel="stylesheet"/>#}
-
-    {#    <!-- CSS for Demo Purpose, don't include it in your project     -->#}
-{#        <link href="{{ url_for('static', filename='assets/css/demo.css') }}" rel="stylesheet" />#}
+    <link href="{{ url_for('static', filename='assets/vendors/bootstrap/light-bootstrap-dashboard.css') }}" rel="stylesheet"/>
 
     <!--  Fonts and icons -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-    <link href="{{ url_for('static', filename='assets/css/pe-icon-7-stroke.css') }}" rel="stylesheet" />
-    <link href="{{ url_for('static',filename='assets/css/font-awesome.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='assets/vendors/fonts_icons/pe-icon-7-stroke.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static',filename='assets/vendors/fonts_icons/font-awesome.min.css') }}" rel="stylesheet">
+
+    <!-- Animated Icons -->
+    <link href="{{ url_for('static',filename='assets/vendors/loaders/loaders.css') }}" rel="stylesheet">
+
 {% endblock %}
+
+{% block pageStyles %}
+{% endblock %}
+
+
 
 {% block scripts %}
 <!--   Core JS Files   -->
-    <script src="{{ url_for('static', filename='assets/js/jquery.3.2.1.min.js') }}" type="text/javascript"></script>
-    <script src="{{ url_for('static', filename='assets/js/bootstrap.min.js') }}" type="text/javascript"></script>
-    <!--  Charts Plugin -->
-    <script src="{{ url_for('static', filename='assets/js/chartist.min.js') }}"></script>
-    <!--  Notifications Plugin    -->
-    <script src="{{ url_for('static', filename='assets/js/bootstrap-notify.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/vendors/jquery/jquery.min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='assets/vendors/bootstrap/bootstrap.min.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='assets/vendors/bootstrap/light-bootstrap-dashboard.js') }}" type="text/javascript"></script>
 
-    <!-- Light Bootstrap Table Core javascript and methods for Demo purpose -->
-    <script src="{{ url_for('static', filename='assets/js/light-bootstrap-dashboard.js') }}"></script>
+    <!-- SocketIO -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
 
-    <script src="../static/assets/js/FlightProfile.js"></script>
+    <!-- Animated Icons -->
+    <script src="{{ url_for('static', filename='assets/vendors/loaders/loaders.css.js') }}"></script>
+
+
+
     <script src="../static/assets/js/dynamic.js"></script>
-{#    <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->#}
-{#    <script src="{{ url_for('static', filename='assets/js/demo.js') }}"></script>#}
 
-{#    <script type="text/javascript">#}
-{#        $(document).ready(function(){#}
-{#            demo.initChartist(); });#}
-{#    </script>#}
+{% endblock %}
 
-
+{% block pageScripts %}
 {% endblock %}
 
 
@@ -62,13 +61,11 @@
       <div class="content">
          <div class="container-fluid">
 
-{#         #TODO do we need this ???#}
             {% include '_toolbar.html' %}
 
             {% block content %} {% endblock %}
          </div>
       </div>
-
       <footer class="footer">
          <div class="container-fluid">
             <nav class="pull-left">
