--- a/OnLand/ControlLaptop/templates/_header.html
+++ b/OnLand/ControlLaptop/templates/_header.html
@@ -1,6 +1,6 @@
 {% block navbar %}
     <div class="navbar navbar-default navbar-fixed">
-        <span class="navbar-brand hidden-sm hidden-xs" >Comp 2019</span>
+        <span class="navbar-brand hidden-sm hidden-xs" style="font-size: 8px" > Go fast kick ass. </span>
 
         <!-- TODO: Remove if not missed
         <div class="btn btn-primary btn-fill btn-xs">
