Connect UDP Telemetry to front end with counter

--- a/OnLand/ControlLaptop/templates/_cards/connectionbar.html
+++ b/OnLand/ControlLaptop/templates/_cards/connectionbar.html
@@ -46,4 +46,7 @@
    </div>
  </div>
 
+
+ <script src="{{ url_for('static', filename='assets/js/ConnectionBar.js') }}"></script>
+
  {% include '_alerts.html' %}
