--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -46,6 +46,8 @@
 
 
     <script src="../static/assets/js/dynamic.js"></script>
+    <script src="{{ url_for('static', filename='assets/js/Base.js') }}"></script>
+
 
 {% endblock %}
 
