--- a/OnLand/ControlLaptop/templates/dashboard.html
+++ b/OnLand/ControlLaptop/templates/dashboard.html
@@ -17,7 +17,7 @@
     </div>
     <div class="row">
        <div class="col-md-6">
-          {% include '_cards/sensor_status.html' %}
+          {% include 'archived/sensor_status.html' %}
        </div>
        <div class="col-md-6">
           {% include '_cards/events.html' %}
