--- a/OnLand/ControlLaptop/templates/_cards/profile.html
+++ b/OnLand/ControlLaptop/templates/_cards/profile.html
@@ -48,14 +48,10 @@
       </div>
       <div class="row">
         <div class="text-center">
-          <div class=" bootstrap-switch bootstrap-switch-wrapper bootstrap-switch-animate bootstrap-switch-off" style="width: 72px">
-            <div class="bootstrap-switch-container" style="width: 122px; margin-left: -50px;">
-              <span class="bootstrap-switch-handle-on bootstrap-switch-info" style="width: 50px;">ON</span>
-              <span class="bootstrap-switch-label" style="width: 30px;">&nbsp;</span><span class="bootstrap-switch-handle-off bootstrap-switch-info" style="width: 50px;">OFF</span>
-              <input type="checkbox" checked="" data-toggle="switch" data-on-color="info" data-off-color="info">
-            </div>
-          </div>
-          <span class="toggle"></span>
+          {{ configuration_form.pod_driver.label }}
+{#          {{ configuration_form.pod_driver (id="pod-driver", type="checkbox", data-on="Motor", data-off="Simulation", checked="true", data-toggle="toggle", data-onstyle="primary") }}#}
+          {{ configuration_form.pod_driver (id="pod-driver") }}
+{#          Pod Driver:  <input id="pod-driver" type="checkbox" data-on="Motor" data-off="Simulation" checked data-toggle="toggle" data-onstyle="primary">#}
         </div>
       </div>
       <div class="text-center">
