--- a/OnLand/ControlLaptop/templates/_cards/profile.html
+++ b/OnLand/ControlLaptop/templates/_cards/profile.html
@@ -8,11 +8,11 @@
       <div class="row">
         <div class="form-group col-md-6">
         {{ configuration_form.retrieval_timeout.label }}
-        {{ configuration_form.retrieval_timeout (class="form-control js-config-form-input", id="retrieval-timout",value=saved_configuration['air_resistance'])}}
+        {{ configuration_form.retrieval_timeout (class="form-control js-config-form-input", id="retrieval-timout",value=saved_configuration['retrieval_timeout'])}}
         </div>
         <div class="form-group col-md-6">
           {{ configuration_form.max_flight_time.label }}
-          {{ configuration_form.max_flight_time (class="form-control js-config-form-input", id="max-flight-time", value=saved_configuration['motor_speed'])}}
+          {{ configuration_form.max_flight_time (class="form-control js-config-form-input", id="max-flight-time", value=saved_configuration['max_flight_time'])}}
         </div>
       </div>
       <div class="row">
@@ -22,24 +22,24 @@
         </div>
         <div class="form-group col-md-6">
           {{ configuration_form.telemetry_port.label }}
-          {{ configuration_form.telemetry_port (class="form-control js-config-form-input", id="telemetry-port",value=saved_configuration['motor_speed'])}}
+          {{ configuration_form.telemetry_port (class="form-control js-config-form-input", id="telemetry-port",value=saved_configuration['telemetry_port'])}}
         </div>
       </div>
 
       <div class="row">
         <div class="form-group col-md-6">
           {{ configuration_form.command_port.label }}
-          {{ configuration_form.command_port (class="form-control js-config-form-input", id="command-port",value=saved_configuration['motor_speed'])}}
+          {{ configuration_form.command_port (class="form-control js-config-form-input", id="command-port",value=saved_configuration['command_port'])}}
         </div>
         <div class="form-group col-md-6">
           {{ configuration_form.flight_Length.label }}
-          {{ configuration_form.flight_Length (class="form-control js-config-form-input", id="flight-length", value=saved_configuration['motor_speed'])}}
+          {{ configuration_form.flight_Length (class="form-control js-config-form-input", id="flight-length", value=saved_configuration['flight_length'])}}
         </div>
       </div>
       <div class="row">
         <div class="form-group col-md-6">
           {{ configuration_form.heartbeat_timout.label }}
-          {{ configuration_form.heartbeat_timout (class="form-control js-config-form-input", id="heartbeat-timeout",value=saved_configuration['motor_speed'])}}
+          {{ configuration_form.heartbeat_timout (class="form-control js-config-form-input", id="heartbeat-timeout",value=saved_configuration['heartbeat_timeout'])}}
         </div>
         <div class="form-group col-md-6">
           {{ configuration_form.pod_ip.label }}
@@ -49,7 +49,7 @@
       <div class="row">
         <div class="text-center">
           {{ configuration_form.pod_driver.label }}
-          {{ configuration_form.pod_driver (id="pod-driver") }}
+          {{ configuration_form.pod_driver (id="pod-driver",value=True if saved_configuration['pod_driver']=='Motor' else 'False') }}
         </div>
       </div>
       <div class="text-center">
