--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -40,6 +40,8 @@
     <script src="{{ url_for('static', filename='assets/vendors/bootstrap/bootstrap.min.js') }}" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='assets/vendors/bootstrap/light-bootstrap-dashboard.js') }}" type="text/javascript"></script>
     <script src="{{ url_for('static', filename='assets/vendors/bootstrap-toggle-master/js/bootstrap-toggle.min.js') }}" type="text/javascript"></script>
+      <!--  Notifications Plugin    -->
+    <script src="{{ url_for('static', filename='assets/vendors/bootstrap/bootstrap-notify.js') }}" type="text/javascript"></script>
 
     <!-- SocketIO -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
