--- a/OnLand/ControlLaptop/templates/_cards/cells1.html
+++ b/OnLand/ControlLaptop/templates/_cards/cells1.html
@@ -7,294 +7,14 @@
                 <th>Voltage</th>
                 <th>Temp</th>
             </tr>
-            <tr>
+            {% for i in range(20) %}
+            <tr id="cell-{{ i }}">
             	<td><i class="fa fa-circle text-success"></i></td>
-                <td>1</td>
+                <td>2</td>
                 <td>1</td>
                 <td>22</td>
             </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>2</td>
-                <td>10</td>
-                <td>47</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>3</td>
-                <td>5</td>
-                <td>31</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>4</td>
-                <td>11</td>
-                <td>40</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>5</td>
-                <td>2</td>
-                <td>31</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>6</td>
-                <td>4</td>
-                <td>31</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>7</td>
-                <td>8</td>
-                <td>6</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>8</td>
-                <td>1</td>
-                <td>8</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>9</td>
-                <td>10</td>
-                <td>25</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>10</td>
-                <td>11</td>
-                <td>25</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>11</td>
-                <td>11</td>
-                <td>49</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>12</td>
-                <td>4</td>
-                <td>37</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>13</td>
-                <td>2</td>
-                <td>36</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>14</td>
-                <td>12</td>
-                <td>37</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>15</td>
-                <td>11</td>
-                <td>26</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>16</td>
-                <td>6</td>
-                <td>7</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>17</td>
-                <td>8</td>
-                <td>43</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>18</td>
-                <td>7</td>
-                <td>9</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>19</td>
-                <td>5</td>
-                <td>45</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>20</td>
-                <td>8</td>
-                <td>48</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>21</td>
-                <td>2</td>
-                <td>23</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>22</td>
-                <td>4</td>
-                <td>14</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>23</td>
-                <td>11</td>
-                <td>41</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>24</td>
-                <td>8</td>
-                <td>42</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>25</td>
-                <td>6</td>
-                <td>45</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>26</td>
-                <td>5</td>
-                <td>33</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>27</td>
-                <td>5</td>
-                <td>41</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>28</td>
-                <td>10</td>
-                <td>11</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>29</td>
-                <td>10</td>
-                <td>39</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>30</td>
-                <td>8</td>
-                <td>30</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>31</td>
-                <td>8</td>
-                <td>45</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>32</td>
-                <td>11</td>
-                <td>21</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>33</td>
-                <td>2</td>
-                <td>46</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>34</td>
-                <td>8</td>
-                <td>28</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>35</td>
-                <td>7</td>
-                <td>20</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>36</td>
-                <td>1</td>
-                <td>32</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>37</td>
-                <td>11</td>
-                <td>43</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>38</td>
-                <td>1</td>
-                <td>44</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>39</td>
-                <td>3</td>
-                <td>22</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>40</td>
-                <td>4</td>
-                <td>49</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>41</td>
-                <td>3</td>
-                <td>9</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>42</td>
-                <td>4</td>
-                <td>36</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>43</td>
-                <td>2</td>
-                <td>33</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>44</td>
-                <td>7</td>
-                <td>44</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>45</td>
-                <td>10</td>
-                <td>22</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>46</td>
-                <td>7</td>
-                <td>15</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>47</td>
-                <td>8</td>
-                <td>10</td>
-            </tr>
-            <tr>
-            	<td><i class="fa fa-circle text-success"></i></td>
-                <td>48</td>
-                <td>12</td>
-                <td>2</td>
-            </tr>
+            {% endfor %}
             </thead></table>
     </div>
 </div>
