--- a/OnLand/ControlLaptop/templates/_cards/electrial_values.html
+++ b/OnLand/ControlLaptop/templates/_cards/electrial_values.html
@@ -1,7 +1,7 @@
 <div class="card ">
     <div class="header">
-        <h4 class="title">Sensor Overview</h4>
-    </div>
+        <h4 class="title">BMS Overview</h4>
+    </div
     <div class="content">
         <table class="table table-hover table-striped table-condensed">
             <thead>
@@ -13,7 +13,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for key, value in sensors.items() %}
+            {% for key, value in electrical_senesors.items() %}
                 <tr class="d-flex sensor-row" id="{{ key }}">
                     <th class="text-center col-5" scope="row">{{ value['name_pretty'] }}</th>
                     <td id="{{ key }}-min" class="col-2"></td>
@@ -26,3 +26,4 @@
         </table>
     </div>
 </div>
+
