Small GUI Fixs and table configs

--- a/OnLand/ControlLaptop/templates/_cards/electrial_values.html
+++ b/OnLand/ControlLaptop/templates/_cards/electrial_values.html
@@ -1,7 +1,7 @@
 <div class="card ">
     <div class="header">
         <h4 class="title">BMS Overview</h4>
-    </div
+    </div>
     <div class="content">
         <table class="table table-hover table-striped table-condensed">
             <thead>
