Add socketio lib
that was easy

--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -47,7 +47,7 @@
     <script src="{{ url_for('static', filename='assets/vendors/bootstrap/bootstrap-notify.js') }}" type="text/javascript"></script>
 
     <!-- SocketIO -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
+    <script src="{{ url_for('static', filename='assets/vendors/socketio/socket.io.slim.js') }}"></script>
 
     <!-- Animated Icons -->
     <script src="{{ url_for('static', filename='assets/vendors/loaders/loaders.css.js') }}"></script>
