Sof 35 telemetry logging pds side (#37)
* init commit for Logger

* implemented telemetry logger MVP

* logging refactor

* improved logging flow

* code refactors

* Merge with master and integrate for Proof test

--- a/OnLand/ControlLaptop/templates/_cards/dts_connectionbar.html
+++ b/OnLand/ControlLaptop/templates/_cards/dts_connectionbar.html
@@ -1,4 +1,4 @@
-{% extends "_cards/connectionbar.html" %}
+{% extends "_cards/connectionCards.html" %}
 
 {% block connectionStates %}
      <div class="card connection-card">
