--- a/OnLand/ControlLaptop/templates/_cards/proofTestControls.html
+++ b/OnLand/ControlLaptop/templates/_cards/proofTestControls.html
@@ -1,22 +1,15 @@
-<div class="card text-center">
+<div class="card connection-card text-center">
     <div class="header">
         <h4 class="title">Controls</h4>
     </div>
     <div class="content ">
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
-            <label id="vent-btn" class="btn brake-btn btn-vent btn-lg">
-                <input type="radio" name="options" autocomplete="off"> VENT
-            </label>
             <label id="off-btn" class="btn brake-btn btn-off btn-lg active">
-                <input type="radio" name="options" autocomplete="off"> OFF
+                <input type="radio" name="options" autocomplete="off"> CLOSED
             </label>
             <label id="on-btn" class="btn brake-btn btn-on btn-lg">
-                <input type="radio" name="options" autocomplete="off"> ENGAGED
+                <input type="radio" name="options" autocomplete="off"> VENT
             </label>
-        </div>
-        <hr>
-        <div class="stats">
-        <p class="category">Be careful, this is nuts.</p>
         </div>
     </div>
 </div>
