--- a/OnLand/ControlLaptop/static/assets/css/DtsControl.css
+++ b/OnLand/ControlLaptop/static/assets/css/DtsControl.css
@@ -19,8 +19,7 @@
   color: white;
   font-size: 12px;
 }
-
-.brake-btn.active{
+.btn.active{
    color: var(--white-font-color);
 }
 .btn-on.active{
