--- a/OnLand/ControlLaptop/templates/proofTest.html
+++ b/OnLand/ControlLaptop/templates/proofTest.html
@@ -5,21 +5,20 @@
 {% endblock %}
 
 {% block content %}
-
-    {% include '_cards/dts_connectionbar.html' %}
-
     <div class="row">
-        <div class="col-md-12">
-          {% include '_cards/dts_controls.html' %}
+        <div class="col-md-4">
+            {% include '_cards/loggerControls.html' %}
         </div>
+        <div class="col-md-4">
+            {% include '_cards/proofTestControls.html' %}
+        </div>
+        {% include '_cards/connectionCards.html' %}
     </div>
 
+
     <div class="row">
-       <div class="col-md-6">
+       <div class="col-md-12">
           {% include '_cards/sensor_values.html' %}
-       </div>
-       <div class="col-md-6">
-          {% include '_cards/electrial_values.html' %}
        </div>
     </div>
 
