Finish html/css layout

--- a/OnLand/ControlLaptop/templates/base.html
+++ b/OnLand/ControlLaptop/templates/base.html
@@ -63,7 +63,7 @@
 
 
 {% block body %}
-<div class="wrapper">
+<div class="wrapper" style="width:100.01vw;">
    <!-- #sidebar Template -->
    {% include '_sidebar.html' %}
    <div class="main-panel">
