Removed HTML attributes from the copy pasta

--- a/OnLand/ControlLaptop/templates/_cards/manual_state.html
+++ b/OnLand/ControlLaptop/templates/_cards/manual_state.html
@@ -1,4 +1,4 @@
-<div class="row text-center">
+<div class="row text-center" style="margin-bottom: 30px">
             <button class="btn btn-primary" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2"> MANUAL CONTROL </button>
 </div>
 
@@ -81,21 +81,21 @@
                     <hr>
                         <div class="row">
                             <div class="col-md-6">
-                                <div id="manual-brake-node-states" class="btn-group btn-group-vertical" data-toggle="buttons">
-                                    <label  class="btn state-btn btn-lg active" disabled="disabled" data-state="bnsStandby">
+                                <div class="btn-group btn-group-vertical" data-toggle="buttons">
+                                    <label  class="btn state-btn btn-lg " data-state="bnsStandby">
                                         <input type="checkbox" name="options" autocomplete="off" > SOL1
                                     </label>
-                                    <label class="btn state-btn btn-lg" disabled="disabled" data-state="bnsFlight">
+                                    <label class="btn state-btn btn-lg" data-state="bnsFlight">
                                         <input type="checkbox" name="options" autocomplete="off" > SOL2
                                     </label>
-                                    <label class="btn state-btn btn-lg" disabled="disabled" data-state="bnsBraking">
+                                    <label class="btn state-btn btn-lg" data-state="bnsBraking">
                                         <input type="checkbox" name="options" autocomplete="off"> SOL3
                                     </label>
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div id="manual-brake-node-states" class="btn-group btn-group-vertical" data-toggle="buttons">
-                                    <label  class="btn state-btn btn-lg active" disabled="disabled" data-state="bnsBraking">
+                                <div class="btn-group btn-group-vertical" data-toggle="buttons">
+                                    <label  class="btn state-btn btn-lg " data-state="bnsBraking">
                                         <input type="checkbox" name="options" autocomplete="off"> SOL4
                                     </label>
                                 </div>
